--- a/04_DSA_Arrays_Easy.ipynb
+++ b/04_DSA_Arrays_Easy.ipynb
@@ -463,6 +463,494 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 8) Linear Search in C\n",
+    "\n",
+    "Problem Statement: Given an array, and an element num the task is to find if num is present in the given array or not. If present print the index of the element or print -1.\n",
+    "Example 1:\n",
+    "Input: arr[]= 1 2 3 4 5, num = 3\n",
+    "Output: 2\n",
+    "Explanation: 3 is present in the 2nd index"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-1"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def search(a,n):\n",
+    "    if n in a:\n",
+    "        return a.index(n)\n",
+    "    else:\n",
+    "        return -1\n",
+    "search(a,6)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = [1,2,3,4,5]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 9) Union of Two Sorted Arrays and intersection\n",
+    "\n",
+    "Problem Statement: Given two sorted arrays, arr1, and arr2 of size n and m. Find the union of two sorted arrays.\n",
+    "\n",
+    "The union of two arrays can be defined as the common and distinct elements in the two arrays.NOTE: Elements in the union should be in ascending order.\n",
+    "\n",
+    "###### Process:\n",
+    "1. first combine the arrays\n",
+    "2. remove duplicates\n",
+    "3. sort the array"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Union"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a1 = [1,2,3,4,5]\n",
+    "a2 = [2,3,4,4,5,0]\n",
+    "# o/p a3 = [1,2,3,4,5]\n",
+    "a1.extend(a2)\n",
+    "a1 =set(a1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{0, 1, 2, 3, 4, 5}"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Intersection"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{2, 3, 4, 5}"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a1 = [1,2,3,4,5,6]\n",
+    "a2 = [2,3,4,4,9,5,0]\n",
+    "set(a2) & set(a1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 10) Find the missing number in an array\n",
+    "\n",
+    "Problem Statement: Given an integer N and an array of size N-1 containing N-1 numbers between 1 to N. Find the number(between 1 to N), that is not present in the given array."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4"
+     ]
+    }
+   ],
+   "source": [
+    "a = [1,2,3,5]\n",
+    "for i in range(1,len(a)+1):\n",
+    "    if i not in a:\n",
+    "        print(i,end='')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 11) Count Maximum Consecutive One’s in the array\n",
+    "\n",
+    "Problem Statement: Given an array that contains only 1 and 0 return the count of maximum consecutive ones in the array."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "6"
+      ]
+     },
+     "execution_count": 90,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = [1,0,0,0,1,1,1,1,1,1,0]\n",
+    "count_ones(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n"
+     ]
+    }
+   ],
+   "source": [
+    "max_count = 0\n",
+    "temp_count = 0\n",
+    "for i in range(len(a)-1):\n",
+    "    if a[i] == 1 and a[i] == a[i+1]:\n",
+    "        temp_count += 1\n",
+    "    if temp_count >= max_count:\n",
+    "        max_count = temp_count\n",
+    "    if a[i] != 1:\n",
+    "        temp_count = 0\n",
+    "if max_count == 0:\n",
+    "    print(max_count)\n",
+    "else:        \n",
+    "    print(max_count+1)        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def count_ones(a):\n",
+    "    cnt = 0\n",
+    "    max_cnt = 0\n",
+    "    for i in range(len(a)):\n",
+    "        if a[i] == 1:\n",
+    "            cnt += 1\n",
+    "        else:\n",
+    "            cnt = 0\n",
+    "        max_cnt = max(max_cnt,cnt)\n",
+    "    return max_cnt"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 14) Find the number that appears once, and the other numbers twice\n",
+    "\n",
+    "Problem Statement: Given a non-empty array of integers arr, every element appears twice except for one. Find that single one"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 103,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = [1,2,2,3,3]\n",
+    "dict_map = {}\n",
+    "dict_map = dict.fromkeys(a,0)\n",
+    "for i in range(len(a)):\n",
+    "    dict_map[a[i]] += 1\n",
+    "for key,value in dict_map.items():\n",
+    "    if value == 1:\n",
+    "        print(key)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 109,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The single element is: 4\n"
+     ]
+    }
+   ],
+   "source": [
+    "def getSingleElement(arr):\n",
+    "    # XOR all the elements:\n",
+    "    xorr = 0\n",
+    "    for num in arr:\n",
+    "        xorr = xorr ^ num\n",
+    "    return xorr\n",
+    "\n",
+    "arr = [4, 1, 2, 1, 2]\n",
+    "ans = getSingleElement(arr)\n",
+    "print(\"The single element is:\", ans)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 15) Longest Subarray with given Sum K\n",
+    "\n",
+    "Problem Statement: Given an array and a sum k, we need to print the length of the longest subarray that sums to k.\n",
+    "\n",
+    "##### Example 1:\n",
+    "\n",
+    "Input Format: N = 3, k = 5, array[] = {2,3,5}\n",
+    "\n",
+    "Result: 2\n",
+    "\n",
+    "Explanation: The longest subarray with sum 5 is {2, 3}. And its length is 2.\n",
+    "\n",
+    "\n",
+    "##### Example 2:\n",
+    "\n",
+    "Input Format: N = 5, k = 10, array[] = {2,3,5,1,9}\n",
+    "\n",
+    "Result: 3\n",
+    "\n",
+    "\n",
+    "Explanation: The longest subarray with sum 10 is {2, 3, 5}. And its length is 3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = [2,3,5]\n",
+    "k = 5\n",
+    "sum = 0\n",
+    "cnt = 0\n",
+    "for i in range(len(a)-1):\n",
+    "    if k in a:\n",
+    "        cnt = 1\n",
+    "    sum = a[i] + a[i+1]\n",
+    "    if sum == k:\n",
+    "        print(cnt)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = [1,2,3,1,1,1,1,4,2,2]\n",
+    "k = 3\n",
+    "hash_arr = []\n",
+    "t_sum = 0\n",
+    "max_len = 0\n",
+    "for i in range(len(a)):\n",
+    "    t_sum += a[i]\n",
+    "    if t_sum == k:\n",
+    "        max_len = max(max_len,i+1)\n",
+    "    rem = t_sum - k\n",
+    "    if rem in hash_arr:\n",
+    "        len = i - hash_arr[rem]\n",
+    "        max_len = max(max_len,len)\n",
+    "    if t_sum not in hash_arr:\n",
+    "        hash_arr.extend([i])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "del hash_arr"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "hash_arr = []"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "hash_arr.extend([0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0]"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "hash_arr"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0, 1, 2, 3, 4, 5, 6, 7, 8, 9]"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "hash_arr"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "'int' object is not callable",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-5-722356ba839b>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     32\u001b[0m     \u001b[0ma\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m[\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m2\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m3\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m4\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m2\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m2\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     33\u001b[0m     \u001b[0mk\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;36m3\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 34\u001b[1;33m     \u001b[0mlength\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mgetLongestSubarray\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0ma\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mk\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     35\u001b[0m     \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34mf\"The length of the longest subarray is: {length}\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m<ipython-input-5-722356ba839b>\u001b[0m in \u001b[0;36mgetLongestSubarray\u001b[1;34m(a, k)\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[1;32mdef\u001b[0m \u001b[0mgetLongestSubarray\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0ma\u001b[0m\u001b[1;33m:\u001b[0m \u001b[1;33m[\u001b[0m\u001b[0mint\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mk\u001b[0m\u001b[1;33m:\u001b[0m \u001b[0mint\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m->\u001b[0m \u001b[0mint\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 4\u001b[1;33m     \u001b[0mn\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mlen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0ma\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;31m# size of the array.\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      5\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      6\u001b[0m     \u001b[0mpreSumMap\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m{\u001b[0m\u001b[1;33m}\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mTypeError\u001b[0m: 'int' object is not callable"
+     ]
+    }
+   ],
+   "source": [
+    "from typing import List\n",
+    "\n",
+    "def getLongestSubarray(a: [int], k: int) -> int:\n",
+    "    n = len(a) # size of the array.\n",
+    "\n",
+    "    preSumMap = {}\n",
+    "    T_Sum = 0\n",
+    "    maxLen = 0\n",
+    "    for i in range(n):\n",
+    "        # calculate the prefix sum till index i:\n",
+    "        T_Sum += a[i]\n",
+    "\n",
+    "        # if the sum = k, update the maxLen:\n",
+    "        if T_Sum == k:\n",
+    "            maxLen = max(maxLen, i + 1)\n",
+    "\n",
+    "        # calculate the sum of remaining part i.e. x-k:\n",
+    "        rem = T_Sum - k\n",
+    "\n",
+    "        # Calculate the length and update maxLen:\n",
+    "        if rem in preSumMap:\n",
+    "            length = i - preSumMap[rem]\n",
+    "            maxLen = max(maxLen, length)\n",
+    "\n",
+    "        # Finally, update the map checking the conditions:\n",
+    "        if T_Sum not in preSumMap:\n",
+    "            preSumMap[T_Sum] = i\n",
+    "    print(preSumMap)\n",
+    "    return maxLen\n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "    a = [1,2,3,1,1,1,1,4,2,2]\n",
+    "    k = 3\n",
+    "    length = getLongestSubarray(a, k)\n",
+    "    print(f\"The length of the longest subarray is: {length}\")"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
