--- a/05_DSA_Strings_Easy.ipynb
+++ b/05_DSA_Strings_Easy.ipynb
@@ -470,6 +470,597 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 7) Rotate String\n",
+    "Given two strings s and goal, return true if and only if s can become goal after some number of shifts on s.\n",
+    "\n",
+    "A shift on s consists of moving the leftmost character of s to the rightmost position.\n",
+    "\n",
+    "    For example, if s = \"abcde\", then it will be \"bcdea\" after one shift.\n"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {},
+   "source": [
+    "Example 1:\n",
+    "\n",
+    "Input: s = \"abcde\", goal = \"cdeab\"\n",
+    "Output: true\n",
+    "\n",
+    "Example 2:\n",
+    "\n",
+    "Input: s = \"abcde\", goal = \"abced\"\n",
+    "Output: false`r"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 213,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Brute force\n",
+    "class Solution:\n",
+    "    def rotateString(self, s: str, goal: str) -> bool:\n",
+    "        l = 0\n",
+    "        while l < len(s):\n",
+    "            s = list(s)\n",
+    "            n = len(s)\n",
+    "            temp = s[0]\n",
+    "            for i in range(n-1):\n",
+    "                s[i] = s[i+1]\n",
+    "            s[n-1] = temp\n",
+    "            l += 1\n",
+    "            if ''.join(s) == goal:\n",
+    "                return True\n",
+    "        return False\n",
+    "            \n",
+    "# Time complextiy 0(N^2)\n",
+    "# Space complextiy 0(N)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 214,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Optimal way\n",
+    "\n",
+    "class Solution:\n",
+    "    def rotateString(self, s: str, goal: str) -> bool:\n",
+    "        return len(s) == len(goal) and s in goal+goal"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 215,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "Soultion_object = Solution()\n",
+    "\n",
+    "result = Soultion_object.rotateString(\"abcde\",\"cdeab\")\n",
+    "\n",
+    "print(result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 195,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "s = list(s)\n",
+    "temp = s[0]\n",
+    "s[0] = s[1]\n",
+    "s[1] = s[2]\n",
+    "s[2] = temp"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 217,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 217,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "s = '734'\n",
+    "'347' in s+s"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 8) Valid Parentheses\n",
+    "Given a string s containing just the characters '(', ')', '{', '}', '[' and ']', determine if the input string is valid.\n",
+    "\n",
+    "An input string is valid if:\n",
+    "\n",
+    "    Open brackets must be closed by the same type of brackets.\n",
+    "    Open brackets must be closed in the correct order.\n",
+    "    Every close bracket has a corresponding open bracket of the same type.\n"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {},
+   "source": [
+    "Example 1:\n",
+    "\n",
+    "Input: s = \"()\"\n",
+    "Output: true\n",
+    "\n",
+    "Example 2:\n",
+    "\n",
+    "Input: s = \"()[]{}\"\n",
+    "Output: true\n",
+    "\n",
+    "Example 3:\n",
+    "\n",
+    "Input: s = \"(]\"\n",
+    "Output: false"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 221,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Solution:\n",
+    "    def isValid(self, s: str) -> bool:\n",
+    "        if len(s) % 2 != 0:\n",
+    "            return False\n",
+    "        d_map = {'(':')','[':']','{':'}'}\n",
+    "        stack = []\n",
+    "        for i in s:\n",
+    "            #print(i,\"--->\")\n",
+    "            if i in d_map:\n",
+    "                stack.append(i)\n",
+    "            elif not stack:\n",
+    "                return False\n",
+    "            elif d_map[stack.pop()] != i:\n",
+    "                return False\n",
+    "            \n",
+    "        return len(stack) == 0\n",
+    "# Time complextiy 0(n)\n",
+    "# Space complextiy 0(n+m) n for stack and m for dictionary"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 222,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Brute Force\n",
+    "Soultion_object = Solution()\n",
+    "\n",
+    "result = Soultion_object.isValid(\"{}()\")\n",
+    "\n",
+    "print(result)\n",
+    "\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 9) Most common word"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "s = ['a','b','c','a','c','c']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "s1 = [i for i in s if i != 'c']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['a', 'b', 'a']"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "s1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "num = [1,2,3,4]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lc = [i**2 for i in num if i%2==0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[4, 16]"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lc"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import re \n",
+    "paragraph = \"Bob hit a ball, the hit BALL flew far after it was hit.\"\n",
+    "banned = ['hit']\n",
+    "\n",
+    "\n",
+    "paragraph = \"a.\"\n",
+    "banned = []\n",
+    "\n",
+    "paragraph = re.sub(r'[^\\w\\s]', '', paragraph)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "IndexError",
+     "evalue": "list index out of range",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-87-3a7131658e7b>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[0mstack\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mparagraph\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msplit\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m' '\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0mres\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m[\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mlower\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mstack\u001b[0m \u001b[1;32mif\u001b[0m \u001b[0mi\u001b[0m \u001b[1;33m!=\u001b[0m \u001b[0mbanned\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      3\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mres\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m<ipython-input-87-3a7131658e7b>\u001b[0m in \u001b[0;36m<listcomp>\u001b[1;34m(.0)\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[0mstack\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mparagraph\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msplit\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m' '\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0mres\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m[\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mlower\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mstack\u001b[0m \u001b[1;32mif\u001b[0m \u001b[0mi\u001b[0m \u001b[1;33m!=\u001b[0m \u001b[0mbanned\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      3\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mres\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mIndexError\u001b[0m: list index out of range"
+     ]
+    }
+   ],
+   "source": [
+    "stack = paragraph.split(' ')\n",
+    "res = [i.lower() for i in stack if i != banned[0]]\n",
+    "print(res)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "arr_dict = dict.fromkeys(res,0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for idx,keys in enumerate(res):\n",
+    "    if keys in res:\n",
+    "        arr_dict[keys.lower()] += 1\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 79,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "max(arr_dict.values())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 10) find-the-index-of-the-first-occurrence-in-a-string\n",
+    "Given two strings needle and haystack, return the index of the first occurrence of needle in haystack, or -1 if needle is not part of haystack."
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {},
+   "source": [
+    "Example 1:\n",
+    "\n",
+    "Input: haystack = \"sadbutsad\", needle = \"sad\"\n",
+    "Output: 0\n",
+    "Explanation: \"sad\" occurs at index 0 and 6.\n",
+    "The first occurrence is at index 0, so we return 0.\n",
+    "\n",
+    "Example 2:\n",
+    "\n",
+    "Input: haystack = \"leetcode\", needle = \"leeto\"\n",
+    "Output: -1\n",
+    "Explanation: \"leeto\" did not occur in \"leetcode\", so we return -1."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "haystack = \"abc\"\n",
+    "needle = \"d\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "if needle not in haystack:\n",
+    "    print(\"-1\")\n",
+    "elif len(haystack) >1 and len(needle) >= 1:\n",
+    "    count = len(needle)\n",
+    "    for i in range(len(haystack)-len(needle)+1):\n",
+    "        hay = haystack[i:count]\n",
+    "        #print(hay,end=\" \")\n",
+    "        if hay == needle:\n",
+    "            break\n",
+    "        else:\n",
+    "            count += 1\n",
+    "    print(i)\n",
+    "else:\n",
+    "    print(\"0\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-1"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "haystack.find(needle)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-1\n"
+     ]
+    }
+   ],
+   "source": [
+    "try:\n",
+    "    haystack.index(needle)\n",
+    "except:\n",
+    "    print(\"-1\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 11) Excel Sheet Column Title\n",
+    "Given an integer columnNumber, return its corresponding column title as it appears in an Excel sheet.\n",
+    "\n",
+    "For example:\n",
+    "\n",
+    "A -> 1\n",
+    "B -> 2\n",
+    "C -> 3\n",
+    "...\n",
+    "Z -> 26\n",
+    "AA -> 27\n",
+    "AB -> 28 \n",
+    "...\n"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {},
+   "source": [
+    "Example 1:\n",
+    "\n",
+    "Input: columnNumber = 1\n",
+    "Output: \"A\"\n",
+    "\n",
+    "Example 2:\n",
+    "\n",
+    "Input: columnNumber = 28\n",
+    "Output: \"AB\"\n",
+    "\n",
+    "Example 3:\n",
+    "\n",
+    "Input: columnNumber = 701\n",
+    "Output: \"ZY\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 140,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "chr() arg not in range(0x110000)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-140-25780e226f01>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[1;32melse\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m     \u001b[0ms\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;34m''\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 6\u001b[1;33m     \u001b[0ms\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mchr\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mcolumnNumber\u001b[0m\u001b[1;33m/\u001b[0m\u001b[1;36m26\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m+\u001b[0m\u001b[1;36m64\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;31m# diving the number by 26 to get first the alphabet\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      7\u001b[0m     \u001b[0ms\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0ms\u001b[0m \u001b[1;33m+\u001b[0m \u001b[0mchr\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mcolumnNumber\u001b[0m\u001b[1;33m%\u001b[0m\u001b[1;36m26\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m+\u001b[0m\u001b[1;36m65\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      8\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0ms\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mValueError\u001b[0m: chr() arg not in range(0x110000)"
+     ]
+    }
+   ],
+   "source": [
+    "columnNumber = 2147483647\n",
+    "if columnNumber <= 26:\n",
+    "    print(chr(columnNumber + 65))\n",
+    "else:\n",
+    "    s = ''\n",
+    "    s = chr(int(columnNumber/26)+64) # diving the number by 26 to get first the alphabet \n",
+    "    s = s + chr(int(columnNumber%26)+65)\n",
+    "print(s)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 133,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'@'"
+      ]
+     },
+     "execution_count": 133,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "chr(int(52 %26)+64)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 144,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "chr() arg not in range(0x110000)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-144-4c05a4d5c880>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mchr\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m2147483647\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m: chr() arg not in range(0x110000)"
+     ]
+    }
+   ],
+   "source": [
+    "chr(2147483647)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -489,6 +1080,33 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 108,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a\n",
+      "1\n"
+     ]
+    }
+   ],
+   "source": [
+    "bin(11).strip('0b')\n",
+    "print(chr(97))\n",
+    "print(ord('A')-64)"
+   ]
   },
   {
    "cell_type": "code",
